Deleted some xml files which are no longer used

--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -8,7 +8,7 @@
         <item
             android:id="@+id/BusinessLoanCalcualtor"
             android:icon="@drawable/ic_business"
-            android:title="Business Loan Calcualtor " />
+            android:title="Business Loan Calculator " />
 
     </group>
 
